2010-09-12  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Fix getopt.m4sh to require Autoconf 2.62 or newer.
	* libltdl/config/getopt.m4sh (m4_version_prereq): Require 2.62,
	not 2.61.

2010-09-11  Charles Wilson  <libtool@cwilson.fastmail.fm>

	Correct typo: $sharedlib_from_linklib_cmd missing '_cmd'

	* libltdl/config/ltmain.m4sh (func_generate_dlsyms): Fix obvious
	typo, $sharedlib_from_linklib_cmd missing '_cmd'.

2010-09-10  Peter Rosin  <peda@lysator.liu.se>

	Convert file name to toolchain format when invoking $NM.
	* libltdl/config/ltmain.m4sh (func_generate_dlsyms)
	(func_win32_libid, func_cygming_gnu_implib_p)
	(func_cygming_ms_implib_p): When using the name lister to find
	symbols in files, convert the file names to a format appropriate
	for the tool. Fixes testsuite issues in mdemo-static-make.test
	and mdemo-make.test when doing a cross from Cygwin/Wine to MinGW
	using MinGW native tools (a.k.a. a "faked" cross).

2010-09-09  Peter Rosin  <peda@lysator.liu.se>

	Fix dependency tracking for MSYS/MinGW.
	* libltdl/config/ltmain.m4sh (func_to_tool_file): Add lazy
	argument which allows the user to specify conversions that are
	not desired.
	(func_mode_compile): Don't convert source files on MSYS, as
	MSYS does it for us. This fixes a regression introduced by
	"Use func_to_tool_file instead of fix_srcfile_path".
	Reported by Charles Wilson.

2010-09-08  Peter Rosin  <peda@lysator.liu.se>

	Mention adjustment of naming of MSVC import libraries in NEWS.
	* NEWS: Mention the change in import library naming on MSVC.

2010-09-07  Peter Rosin  <peda@lysator.liu.se>

	Adjust naming of MSVC import libraries.
	* libltdl/m4/libtool.m4 (_LT_SYS_DYNAMIC_LINKER) [mingw, cygwin]
	[pw32, cegcc] <cl*, library_names_spec>: Adjust naming of the
	import library from foo-<major-version>.lib to foo.dll.lib, to
	avoid clashes with the static library for unversioned libraries.
	(_LT_LINKER_SHLIBS, _LT_LANG_CXX_CONFIG) [mingw, cygwin, pw32]